# fAIr

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: backend_build.yml
backend/: .pre-commit-config.yaml  pyproject.toml
backend/login/: urls.py
backend/tests/: factories.py  test_core_model.py  test_endpoints.py  test_login_model.py  test_urls.py
