[project]
name = "fAIr"
version = "1.0.1"
description = "AI Assisted Mapping"
authors = [
    {name = "HOTOSM", email = "sysadmin@hotosm.org"},
]
dependencies = [
    "django==4.1.4",
    "psycopg2>=2.9.9",
    "djangorestframework==3.14.0",
    "djangorestframework-gis==1.0",
    "dj-database-url==1.2.0",
    "django-leaflet==0.28.3",
    "drf-yasg==1.21.4",
    "django-environ==0.9.0",
    "django-filter==22.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL-3.0 license"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
